# CqUsbCam_Linux

./: .gitignore  .gitignore~  README.md
CqU3CameraAPI/: CqU3Cam.cpp~  CqU3Cam.h  CqU3Cam.h~  Makefile~
CqU3CameraAPI/x64/: libCqU3Cam.txt
CqUsbCam/: AR0135.h~  CMakeLists.txt  CMakeLists.txt~  CqU3Cam.cpp~  CqUsbCam.cpp  CqUsbCam.cpp~  CqUsbCam.h  CqUsbCam.h~  DataCapture.cpp  DataCapture.cpp~  DataCapture.h  DataCapture.h~  DataProcess.cpp  DataProcess.h  DataProcess.h~  ImgFrame.h~  Makefile_old  SensorCapbablity.h  SensorCapbablity.h~  Sensor_AR0135.cpp~  Sensor_AR0135.h~  Sensor_MT9V034.cpp~  Types.h  Types.h~  imgframe.h~  libcyusb.cpp  tagSensor.h~  wqueue.h  wqueue.h~
CqUsbCam/TEST/: Makefile~  test.cpp~  test3.sh~
CqUsbCam/TEST/test/: Makefile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  test  test.pro  ui_mainwindow.h
CqUsbCam/sensors/: AR0135.cpp  AR0135.h  AR0144.cpp  AR0144.h  CMakeLists.txt  MT9M001.cpp  MT9M001.h  MT9V034.cpp  MT9V034.cpp~  MT9V034.h  MT9V034.h~  SC130GS.cpp  SC130GS.h
examples/cmd/AR013X/: main.cpp~
examples/cmd/AR013x/: cyusb.conf  main.cpp
examples/cmd/AR0144/: main.cpp
examples/cmd/MT9M001/: main.cpp
examples/cmd/MT9V034/: CMakeLists.txt  main.cpp  main.cpp~
examples/cmd/SC130GS/: CMakeLists.txt  main.cpp
examples/cmd/usbCamConsole/: main.cpp  main.cpp~
